traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:12: error: not found: value setPose
    setPose(x,y);
    ^